# cache-commander

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  deny.toml
.github/workflows/: ci.yml  nightly-e2e.yml  release.yml
doc/: ccmd.1
docs/: adding-a-provider.md  mcp.md  user-guide.md
docs/superpowers/plans/: 2026-04-05-homebrew-enrichment.md  2026-04-08-yarn-pnpm-providers.md
docs/superpowers/specs/: 2026-04-08-yarn-pnpm-providers-design.md  2026-04-21-go-provider-design.md
homebrew/: ccmd.rb
scripts/: install-hooks.sh  pre-commit
src/: app.rs  config.rs  lib.rs  main.rs
src/mcp/: mod.rs  tools.rs
src/providers/: bun.rs  cargo.rs  chroma.rs  generic.rs  gh.rs  go_mod.rs  gradle.rs  homebrew.rs  huggingface.rs  maven.rs  mod.rs  npm.rs  pip.rs  pnpm.rs  pre_commit.rs  prisma.rs  swiftpm.rs  torch.rs  uv.rs  whisper.rs  xcode.rs  yarn.rs
src/scanner/: mod.rs  walker.rs
src/security/: cache.rs  mod.rs  osv.rs  registry.rs
src/tree/: node.rs  state.rs
src/ui/: detail_panel.rs  dialogs.rs  mod.rs  theme.rs  tree_panel.rs
src/updater/: cache.rs  http.rs  mod.rs  version.rs
tests/: cache_persistence.rs  e2e_go_provider.rs  e2e_js_providers.rs  e2e_jvm_providers.rs  http_mocked.rs  integration.rs  integration_go.rs  keybindings.rs  mcp_integration.rs
