[package]
name = "ccmd"
version = "0.2.0-rc1"
edition = "2024"
rust-version = "1.85"
description = "Cache Commander — a TUI for browsing and managing cache directories"
license = "MIT"
repository = "https://github.com/juliensimon/cache-commander"
homepage = "https://github.com/juliensimon/cache-commander"
keywords = ["cache", "tui", "disk-space", "cleanup", "security"]
categories = ["command-line-utilities"]
exclude = ["REVIEW-*.md", "demo.tape", "docs/superpowers/", ".DS_Store"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.deb]
maintainer = "Julien Simon <julien@julien.org>"
section = "utils"
priority = "optional"
extended-description = "Scan cached packages for known CVEs, find outdated dependencies, and reclaim disk space — all from one TUI. Supports HuggingFace, pip, uv, npm, Cargo, Homebrew, and more.\n\nHomepage: https://github.com/juliensimon/cache-commander"
assets = [
    ["doc/ccmd.1", "usr/share/man/man1/ccmd.1", "644"],
]

[features]
default = []
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars", "dep:tracing-subscriber"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
jwalk = "0.8"
directories = "5"
humansize = "2"
chrono = "0.4"
ureq = "2"
serde_json = "1"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars = { version = "1", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
